Update css of pixel art

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
       </p>
     </div>
     <div class="project">
-      <a href = projects/pixel.html>Pixel art tool</a>
+      <a href = projects/pixel/pixel.html>Pixel art tool</a>
       <p>
         Created a pixel art generating tool using javascript that allows for variable grid sizes, colours, and offer shading and lightening
         features. 
