Add player and cpu options

--- a/projects/tictactoe/tictactoe.html
+++ b/projects/tictactoe/tictactoe.html
@@ -9,6 +9,13 @@
   <script src="tictactoe.js" defer></script>
 </head>
 <body>
-  <div class="display"></div>
+  <button class = "player">player</button>
+  <button class = "cpu">cpu</button>
+  <button class = "reset">reset</button>
+  <div class="display">
+  </div>
+  <div class="boardcontainer">
+
+  </div>
 </body>
 </html>
