Add dragging functionality and improve responsive design

--- a/projects/pixel/pixel.html
+++ b/projects/pixel/pixel.html
@@ -15,14 +15,15 @@
     <div class="content">
       <div class="settings">
         <div class="colour-setting">
-          Pixel colour
+          <div class="label">Pixel colour</div>
           <input type="color" class="colour-sel" value="#000000">
         </div>
         <div class="colour-setting">
-          Background Colour
+          <div class="label">Background Colour</div>
           <input type="color" class="bg-sel" value="#f0f8ff">
         </div>
-        <button type="button" class="add active">Add/Remove</button>
+        <button type="button" class="add active">Add</button>
+        <button type="button" class="remove">Remove</button>
         <button type="button" class="lighten">Lighten</button>
         <button type="button" class="darken">Darken</button>
         <button type="button" class="remove-gridline active">Gridlines</button>
