Update projects page

--- a/projects.html
+++ b/projects.html
@@ -17,27 +17,31 @@
       <a class="menu_item" href="projects.html">Projects</a>
     </div>
   </div>
-  <div class="container">
-    <div class="project">
-      This website
-      <p>
-        Created as a way for me to consolidate what I have done as well as to practice responsive web design using flexbox.
-      </p>
-    </div>
-    <div class="project">
-      <a href="https://github.com/tzejit/multi-year-module-planner">Multi-year module planner</a>
-      <p>
-        Created a module planning tool to aid myself in mapping out my long term module plan. This project focussed more
-        on the Django framework and the backend data processing rather than the front end aesthetics.
-      </p>
-    </div>
-    <div class="project">
-      <a href = projects/pixel/pixel.html>Pixel art tool</a>
-      <p>
-        Created a pixel art generating tool using javascript that allows for variable grid sizes, colours, and offer shading and lightening
-        features. 
-      </p>
-    </div>
+  <div class="project">
+    <a class = "projlink">
+      <div class="imgcontainer">
+        <img class ="projlogo" src="images/webpage.png">
+        <div class ="overlay"> This website </div>
+      </div>
+    </a>
+    <a class = "projlink" href="https://github.com/tzejit/multi-year-module-planner">
+      <div class="imgcontainer">
+        <img src="images/planner.png" class ="projlogo">
+        <div class ="overlay"> Multi-year Module Planner </div>
+      </div>
+    </a>
+    <a class = "projlink" href = projects/pixel/pixel.html>
+      <div class="imgcontainer">
+        <img src="images/pixel.png" class ="projlogo">
+        <div class ="overlay"> Pixel art tool </div>
+      </div>
+    </a>
+    <a class = "projlink" href = projects/tictactoe/tictactoe.html>
+      <div class="imgcontainer">
+        <img src="images/tic-tac-toe.png" class ="projlogo">
+        <div class ="overlay">Unbeatable tic tac toe</div>
+      </div>
+    </a>
   </div>
   <div class = "footer">
     <a href="https://www.linkedin.com/in/tze-jit-kho-0a6826196/">
