Update animations and padding

--- a/education.html
+++ b/education.html
@@ -93,18 +93,20 @@
         <div>
           Modules taken:
         </div>
-        <div class="collapsiblecontainer">
-          <button type="button" class="collapsible">Subjects</button>
-          <ul class="dropdown">
-            <li>Physics</li>
-            <li>Chemistry</li>
-            <li>Mathematics</li>
-            <li>Economics</li>
-            <li>General Paper</li>
-            <li>Project Work</li>
-            <li>Higher Chinese</li>
-            <li>Pharmaceutical Chemistry</li>
-          </ul>
+        <div class="content">
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">Subjects</button>
+            <ul class="dropdown">
+              <li>Physics</li>
+              <li>Chemistry</li>
+              <li>Mathematics</li>
+              <li>Economics</li>
+              <li>General Paper</li>
+              <li>Project Work</li>
+              <li>Higher Chinese</li>
+              <li>Pharmaceutical Chemistry</li>
+            </ul>
+          </div>
         </div>
         <div class="achievement">
           <div class="collapsiblecontainer">
