Add markdone function and link in projects

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,12 @@
         <div class ="overlay">Unbeatable tic tac toe</div>
       </div>
     </a>
+    <a class = "projlink" href = projects/todolist/dist/index.html>
+      <div class="imgcontainer">
+        <img src="images/todolist.png" class ="projlogo">
+        <div class ="overlay">TodoList</div>
+      </div>
+    </a>
   </div>
   <div class = "footer">
     <a href="https://www.linkedin.com/in/tze-jit-kho-0a6826196/">
